[package]
name = "wasm_mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [
    "cdylib",
    "rlib"
]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
futures = "0.3"
chrono = {"version"="0.4", "features"=["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# typetag = "0.2"  #does NOT work with WASM.
enum_dispatch = "0.3"
